Поддержка Docker: контейнеризация и управление roots
- Dockerfile с multi-stage сборкой (eclipse-temurin:25-jdk/jre-alpine)
- GitHub Actions workflow для автоматической публикации в ghcr.io
- Переменная NTS_DOCKER_ROOTS для явного указания корневых директорий
- Клиентские roots переопределяются в Docker-режиме (пути хоста недоступны внутри контейнера)
- docker-compose.yml для локальной разработки
- Обновлённая документация README (EN/RU)

Граничные случаи NTS_DOCKER_ROOTS:
- Пустое значение → fallback к PROJECT_ROOT или CWD
- Множественные пути через двоеточие
- Пути с пробелами
- Пустые элементы (trailing separators) игнорируются